# gnupplus

./: .gitignore  AUTHORS  Makefile.am  README  THANKS  bootstrap  configure.ac
html/: gnuplot__i_8c-source.html  gnuplot__i_8c.html  gnuplot__i_8h-source.html  gnuplot__i_8h.html  index.html  struct__GNUPLOT__CTRL__.html
src/: Makefile  Makefile.am  drawable.cpp  except.cpp  gnup.hpp  gnuplot.cpp  gnupplus.hpp  gp_base.cpp  layout.cpp  main.cpp  pipe.cpp  plots.cpp
src/gnup/: except.hpp  gp_base.hpp  pipe.hpp  plots.hpp
src/gnupplus/: drawable.hpp  gnuplot.hpp  layout.hpp  pipe.hpp  plots.hpp
src/tests/: Makefile.am  example.cpp  layout0.cpp  realtime.cpp  simpleplot.cpp  test_environ.c  test_environ.cc  test_environ.h  test_environ.hh  testecho
test/: example.c
